<resources>
    <string name="mUsername">Username</string>
    <string name="password">Password</string>
    <string name="app_name">Treasure Hunt</string>
    <string name="login_button">Sign In</string>
    <string name="login_no_account">Don\'t have an account?</string>
    <string name="register_firstname">First Name</string>
    <string name="register_lastname">Last Name</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="register_button">Sign Up</string>
    <string name="register_have_an_account">Already have an account?</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_user_profile">User Profile</string>
    <string name="label_hunts_completed">Hunts completed:</string>
    <string name="label_hunts_created">Hunts created:</string>
    <string name="label_points">Points:</string>
    <string-array name="type_of_hunts_array">
        <item>Active Hunts</item>
        <item>Completed Hunts</item>
        <item>My Hunts</item>
    </string-array>
    <string name="title_activity_hunt">Hunt</string>
    <string name="title_activity_new_hunt">New Hunt</string>
    <string name="label_clues">Clues</string>
    <string name="button_add_clue">Add clue</string>
    <string name="button_save">Save</string>
    <string name="title_activity_add_clue">Add Clue</string>
    <string name="button_choose_location">Choose location</string>
    <string name="button_my_location">My Location</string>
    <string name="button_cancel">Cancel</string>
    <string name="join_hunt">Join hunt</string>
    <string name="title_activity_leaderboard">Leaderboard</string>
    <string name="global">Global</string>
    <string name="friends">Friends</string>
    <string name="title_activity_log_out">Leaving?</string>
    <string name="button_yes">Yes</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_friend_list">Friends</string>
    <string name="title_activity_bluetooth">Bluetooth</string>
    <string name="none_paired">There are no paired devices</string>
    <string name="none_found">No devices found</string>
    <string name="profile_completed_hunts">%1$s/%2$s</string>
    <string name="title_activity_answer_clue">Answer Clue</string>
    <string name="btn_submit_answer">Submit answer</string>
    <string name="lbl_hunt_createdby">%1$s</string>
</resources>
