<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/wallpaper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <ImageButton
        android:id="@+id/add_prof_image"
        android:src="@drawable/add_profile_pic"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="136dp"
        android:layout_marginLeft="136dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="136dp"
        android:layout_marginRight="136dp"
        android:background="@drawable/round_button" />

    <EditText
        android:id="@+id/edit_register_firstname"
        style="@style/EditText"
        android:layout_below="@+id/add_prof_image"
        android:layout_marginTop="20dp"
        android:hint="@string/register_firstname"
        android:inputType="text" />
    <EditText
        android:id="@+id/edit_register_lastname"
        style="@style/EditText"
        android:layout_below="@+id/edit_register_firstname"
        android:layout_marginTop="21dp"
        android:hint="@string/register_lastname"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_register_email"
        style="@style/EditText"
        android:layout_below="@+id/edit_register_lastname"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edit_register_password"
        style="@style/EditText"
        android:layout_below="@+id/edit_register_email"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edit_register_repeat_password"
        style="@style/EditText"
        android:layout_below="@+id/edit_register_password"
        android:layout_marginTop="21dp"
        android:hint="@string/register_confirm_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_register_repeat_password"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="130dp"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="130dp"
        android:layout_marginRight="130dp"
        android:background="#B05100"
        android:text="@string/register_button"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/button_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="90dp"
        android:layout_marginBottom="10dp"
        android:background="@null"
        android:text="@string/register_have_an_account"
        android:textColor="#EC8E3D" />/

</RelativeLayout>