<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/wallpaper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <EditText
        android:id="@+id/edit_login_email"
        style="@style/EditText"
        android:layout_alignParentTop="true"
        android:layout_marginTop="340dp"
        android:hint="@string/mEmail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edit_login_password"
        style="@style/EditText"
        android:layout_below="@+id/edit_login_email"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_login_password"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="130dp"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="130dp"
        android:layout_marginRight="130dp"
        android:background="@drawable/round_button"
        android:text="@string/login_button"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/button_no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="90dp"
        android:layout_marginBottom="10dp"
        android:background="@null"
        android:text="@string/login_no_account"
        android:textColor="#EC8E3D" />/
</RelativeLayout>