<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".UserProfileActivity"
    tools:showIn="@layout/activity_user_profile"
    android:orientation="vertical"
    android:layout_marginTop="15dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="172dp"
        android:layout_gravity="center"
        app:cardCornerRadius="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_user_profile"
                android:layout_width="110dp"
                android:layout_height="123dp"
                android:layout_alignParentLeft="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/user" />

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/iv_user_profile"
                android:gravity="center_horizontal"
                android:text="Jon Snow"
                android:textSize="22dp"
                android:layout_marginBottom="7dp"/>


            <TextView
                android:id="@+id/lbl_hunts_completed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_user_name"
                android:layout_toRightOf="@id/iv_user_profile"
                android:textSize="16dp"
                android:text="@string/label_hunts_completed" />

            <TextView
                android:id="@+id/tv_hunts_completed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_user_name"
                android:layout_toRightOf="@id/lbl_hunts_completed"
                android:layout_marginLeft="8dp"
                android:textSize="16dp"
                android:text="3/5" />

            <TextView
                android:id="@+id/lbl_hunts_created"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lbl_hunts_completed"
                android:layout_toRightOf="@id/iv_user_profile"
                android:textSize="16dp"
                android:text="@string/label_hunts_created" />

            <TextView
                android:id="@+id/tv_hunts_created"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_hunts_completed"
                android:layout_toRightOf="@+id/lbl_hunts_created"
                android:textSize="16dp"
                android:layout_marginLeft="8dp"
                android:text="2" />

            <TextView
                android:id="@+id/lbl_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lbl_hunts_created"
                android:layout_toRightOf="@id/iv_user_profile"
                android:textSize="16dp"
                android:text="@string/label_points" />

            <TextView
                android:id="@+id/tv_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lbl_hunts_created"
                android:layout_toRightOf="@id/lbl_points"
                android:textSize="16dp"
                android:layout_marginLeft="8dp"
                android:text="356" />

            <Button
                android:id="@+id/btn_new_hunt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Hunt"
                android:layout_below="@id/iv_user_profile"
                android:backgroundTint="@color/colorAccent"
                android:textColor="@color/colorWhite"
                android:layout_toRightOf="@id/iv_user_profile"
                />

            <Button
                android:id="@+id/btn_discover_friends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Find Friends"
                android:layout_below="@id/iv_user_profile"
                android:layout_toRightOf="@id/btn_new_hunt"
                android:backgroundTint="@color/colorAccent"
                android:textColor="@color/colorWhite"
                />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <Spinner
        android:id="@+id/spinner_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </Spinner>


</LinearLayout>